# ycjb-tauri-app

./: .env.dev  .env.pre  .env.prod  .env.qa  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/: Local State
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/Default/: BrowsingTopicsState  Cookies  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Translate Ranker Model  TransportSecurity  Visited Links  Web Data
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/Default/GPUCache/: index  (+1 more)
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/GrShaderCache/: data_1  index
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/GraphiteDawnCache/: data_1  index
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/Safe Browsing/: ChromeExtMalware.store  ChromeUrlClientIncident.store  UrlBilling.store  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalware.store  UrlSoceng.store  UrlSubresourceFilter.store  UrlSuspiciousSite.store  UrlUws.store
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/ShaderCache/: data_1  index
src-tauri/C:\Users\Administrator\Downloads\开标助手_v1.4\缓存目录/component_crx_cache/: efniojlnjndmcbiieegkicadnoecjjef_1.4d4f316148206cb0c4249e0e8cc741ee243b7ccb267d8a93b3bb196de7c93d2b  (+1 more)
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  webdriver.rs
(+93 files in other folders)
